--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,30 +15,12 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: make test-coverage-1
+            - run: npm run test
 
       - coveralls/upload:
           parallel: true
           flag_name: Test 1
           verbose: true
-
-  build-2:
-    executor:
-      name: node/default
-
-    steps:
-      - checkout
-
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: make test-coverage-2
-
-      - coveralls/upload:
-          parallel: true
-          flag_name: Test 2
-          verbose: true
-
   done:
     executor:
       name: node/default
@@ -51,6 +33,5 @@ workflows:
   test_parallel_then_upload:
     jobs:
       - build-1
-      - build-2
       - done:
-          requires: [build-1, build-2]
+          requires: [build-1]
